Added production CORS configuration